@@ -13,10 +13,11 @@ installer     = ModuleBuild
 mb_class      = My::ModuleBuild
 
 [RemovePrereqs]
-; comes with perl
+; comes with perl 5.10.1
 remove = strict
 remove = warnings
 remove = lib
+remove = autodie
 remove = File::Temp
 remove = Getopt::Long
 remove = Pod::Usage
