@@ -11,6 +11,11 @@ use Path::Class qw( file dir );
 use lib 'inc';
 use Test::HTTPTinyFile;
 
+$App::cpangitify::_run_cb = sub {
+  my($git, @command) = @_;
+  diag "+ git @command";
+};
+
 my $home = dir( File::HomeDir->my_home );
 
 do {
